--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,10 +27,12 @@ jobs:
         java-version: '18'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
+    - name: Build with Maven and tests
       run: cd java && mvn -B package --file pom.xml
-  tests: 
+  
+  mutation-tests:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 18
@@ -39,10 +41,13 @@ jobs:
         java-version: '18'
         distribution: 'temurin'
         cache: maven
-    - name: Run tests
-      run: cd java && mvn test
-    
-      
+    - name: Run mutation tests
+      run: mvn org.pitest:pitest-maven:mutation
+    - name: Upload Mutation Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: mutation-results
+        path: target/pit-reports
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
