--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,12 +42,12 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run mutation tests
-      run: mvn org.pitest:pitest-maven:mutationCoverage
+      run: cd java && mvn org.pitest:pitest-maven:mutationCoverage
     - name: Upload Mutation Test Results
       uses: actions/upload-artifact@v2
       with:
         name: mutation-results
-        path: target/pit-reports
+        path: java/target/pit-reports
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
