--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,9 @@ jobs:
   
   mutation-tests:
     runs-on: ubuntu-latest
+    defaults:
+    run:
+      working-directory: java
     needs: build
     steps:
     - uses: actions/checkout@v3
