--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,7 +48,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run mutation tests
-      run: mvn org.pitest:pitest-maven:mutationCoverage
+      run: cd test && mvn org.pitest:pitest-maven:mutationCoverage
     - name: Upload Mutation Test Results
       uses: actions/upload-artifact@v2
       with:
